fix: nft owners api param cursor/size by query
