# docs/swagger.json
@@ -1362,7 +1362,7 @@
                 }
             }
         },
-        "/nft/owners/{codehash}/{genesis}/{cursor}/{size}": {
+        "/nft/owners/{codehash}/{genesis}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -1377,7 +1377,7 @@
                         "default": 0,
                         "description": "起始游标",
                         "name": "cursor",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -1385,7 +1385,7 @@
                         "default": 10,
                         "description": "返回记录数量",
                         "name": "size",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
